--- a/package.json
+++ b/package.json
@@ -43,7 +43,9 @@
     "react-redux": "^9.1.1",
     "redux": "^5.0.1",
     "redux-persist": "^6.0.0",
-    "simplebar-react": "^3.2.6"
+    "simplebar-react": "^3.2.6",
+    "sonner": "^1.5.0",
+    "yup": "^1.4.0"
   },
   "devDependencies": {
     "@types/node": "^20",
