--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "redux-persist": "^6.0.0",
     "simplebar-react": "^3.2.6",
     "sonner": "^1.5.0",
+    "stylis-plugin-rtl": "^2.1.1",
     "yup": "^1.4.0"
   },
   "devDependencies": {
