--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "autoprefixer": "^10.4.19",
     "axios": "^1.6.8",
     "framer-motion": "^11.2.10",
+    "howler": "^2.2.4",
     "i18next": "^23.11.5",
     "lodash": "^4.17.21",
     "next": "14.2.4",
@@ -46,9 +47,11 @@
     "simplebar-react": "^3.2.6",
     "sonner": "^1.5.0",
     "stylis-plugin-rtl": "^2.1.1",
+    "v": "^0.3.0",
     "yup": "^1.4.0"
   },
   "devDependencies": {
+    "@types/howler": "^2.2.11",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
