up date yaadbood check bobx

--- a/package.json
+++ b/package.json
@@ -28,9 +28,11 @@
     "@types/react-dom": "18.2.7",
     "autoprefixer": "^10.4.19",
     "axios": "^1.6.8",
+    "date-fns": "^3.6.0",
     "framer-motion": "^11.2.10",
     "howler": "^2.2.4",
     "i18next": "^23.11.5",
+    "i18next-browser-languagedetector": "^8.0.0",
     "lodash": "^4.17.21",
     "next": "14.2.4",
     "numeral": "^2.0.6",
@@ -53,6 +55,7 @@
   "devDependencies": {
     "@types/howler": "^2.2.11",
     "@types/node": "^20",
+    "@types/numeral": "^2.0.5",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "@types/stylis": "^4.2.6",
