--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "@iconify/react": "^4.1.1",
     "@mui/lab": "^5.0.0-alpha.170",
     "@mui/material": "^5.15.15",
+    "@mui/x-date-pickers": "^6.19.4",
+    "@mui/x-date-pickers-pro": "^6.19.4",
     "@reduxjs/toolkit": "^2.2.5",
     "@types/node": "20.6.2",
     "@types/react": "18.2.21",
@@ -29,6 +31,7 @@
     "autoprefixer": "^10.4.19",
     "axios": "^1.6.8",
     "date-fns": "^3.6.0",
+    "date-fns-jalali": "^2.13.0-0",
     "framer-motion": "^11.2.10",
     "howler": "^2.2.4",
     "i18next": "^23.11.5",
