--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "howler": "^2.2.4",
     "i18next": "^23.11.5",
     "i18next-browser-languagedetector": "^8.0.0",
+    "js-cookie": "^3.0.5",
     "lodash": "^4.17.21",
     "next": "14.2.4",
     "numeral": "^2.0.6",
@@ -58,6 +59,7 @@
   },
   "devDependencies": {
     "@types/howler": "^2.2.11",
+    "@types/js-cookie": "^3.0.6",
     "@types/node": "^20",
     "@types/numeral": "^2.0.5",
     "@types/react": "^18",
