--- a/.env
+++ b/.env
@@ -8,8 +8,8 @@ NextAuth_SECRET=<!-- any text -->
 
 JWT_SECRET_KEY=client_id
 
- BASE_URL_API: "http://172.16.11.24:8080/psya/"
- NEXT_PUBLIC_BASE_URL_API: "http://172.16.11.24:8080/psya/"
+ BASE_URL_API: "172.16.11.24/yaadbood"
+ NEXT_PUBLIC_BASE_URL_API: "172.16.11.24/yaadbood"
 
 //==============================================================================
 //                                                                              
