--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@emotion/styled": "^11.11.5",
     "@hookform/resolvers": "^3.4.0",
     "@iconify/react": "^4.1.1",
+    "@mui/joy": "^5.0.0-beta.48",
     "@mui/lab": "^5.0.0-alpha.170",
     "@mui/material": "^5.15.15",
     "@mui/x-date-pickers": "^6.20.2",
@@ -28,6 +29,17 @@
     "@types/node": "20.6.2",
     "@types/react": "18.2.21",
     "@types/react-dom": "18.2.7",
+    "@uppy/compressor": "^1.1.4",
+    "@uppy/core": "^4.0.0",
+    "@uppy/dashboard": "^3.8.3",
+    "@uppy/drag-drop": "^3.1.0",
+    "@uppy/file-input": "^3.1.2",
+    "@uppy/image-editor": "^2.4.6",
+    "@uppy/locales": "^3.5.4",
+    "@uppy/progress-bar": "^3.1.1",
+    "@uppy/react": "^3.3.1",
+    "@uppy/tus": "^4.0.0",
+    "@uppy/webcam": "^4.0.0",
     "autoprefixer": "^10.4.19",
     "axios": "^1.6.8",
     "date-fns": "^3.6.0",
@@ -40,6 +52,7 @@
     "js-cookie": "^3.0.5",
     "lodash": "^4.17.21",
     "next": "14.2.4",
+    "notistack": "^3.0.1",
     "numeral": "^2.0.6",
     "prettier": "^3.0.3",
     "react": "^18",
