--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@types/react": "18.2.21",
     "@types/react-dom": "18.2.7",
     "@uppy/compressor": "^1.1.4",
+    "@uppy/core": "^4.0.1",
     "@uppy/dashboard": "^3.8.3",
     "@uppy/drag-drop": "^3.1.0",
     "@uppy/file-input": "^3.1.2",
@@ -64,6 +65,7 @@
     "redux-persist": "^6.0.0",
     "simplebar-react": "^3.2.6",
     "sonner": "^1.5.0",
+    "stylis": "^4.3.2",
     "stylis-plugin-rtl": "^2.1.1",
     "v": "^0.3.0",
     "yup": "^1.4.0"
