--- a/package.json
+++ b/package.json
@@ -11,14 +11,20 @@
   "dependencies": {
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
+    "@hookform/resolvers": "^5.0.1",
     "@mui/icons-material": "^7.1.1",
+    "@mui/lab": "^7.0.0-beta.13",
     "@mui/material": "^7.1.1",
+    "@mui/x-date-pickers": "^8.5.0",
     "@reduxjs/toolkit": "^2.8.2",
     "@tanstack/react-query": "^5.80.1",
     "axios": "^1.9.0",
+    "dayjs": "^1.11.13",
+    "framer-motion": "^12.16.0",
     "next": "15.3.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-hook-form": "^7.57.0",
     "react-redux": "^9.2.0",
     "react-toastify": "^11.0.5",
     "redux-persist": "^6.0.0"
